--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-table": "^8.10.7",
     "axios": "^0.26.0",
     "framer-motion": "^10.12.21",
     "next": "^13.3.0",
