--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.2",
