--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "sharp": "^0.33.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
