--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.2",
     "framer-motion": "^10.12.21",
+    "lodash.debounce": "^4.0.8",
     "next": "^13.3.0",
     "next-auth": "^4.24.5",
     "nookies": "^2.5.2",
@@ -41,6 +42,7 @@
     "@next/eslint-plugin-next": "^12.1.0",
     "@svgr/webpack": "^8.0.1",
     "@tanstack/eslint-plugin-query": "^4.32.5",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "17.0.21",
     "@types/qs": "^6.9.10",
     "@types/react": "^18.0.9",
