--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
