--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.12.21",
     "lodash.debounce": "^4.0.8",
