--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
+    "swiper": "^11.0.5",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
