--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "^13.3.0",
     "next-auth": "^4.24.5",
     "nookies": "^2.5.2",
+    "nprogress": "^0.2.0",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-datepicker": "^4.24.0",
@@ -48,6 +49,7 @@
     "@tanstack/eslint-plugin-query": "^4.32.5",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "17.0.21",
+    "@types/nprogress": "^0.2.3",
     "@types/qs": "^6.9.10",
     "@types/react": "^18.0.9",
     "@types/react-datepicker": "^4.19.3",
